test cases done